tests/third_party/voliva/wsa-tests/count.err
file://$WSA/dist/assets/io-CvrHjuyQ.js:771
    throw new Error(`invalid opcode ${opcode}`);
          ^

Error: invalid opcode test
    at parseArgs (file://$WSA/dist/assets/io-CvrHjuyQ.js:771:11)
    at file://$WSA/dist/assets/io-CvrHjuyQ.js:914:45
    at process.processTicksAndRejections (node:internal/process/task_queues:105:5)

Node.js v23.3.0
